@@ -18,3 +18,8 @@ mån aug 21 16:36:57 CEST 2006
 CPU time cG(1):  121.867 s
 CPU time mcG(1): 32.0354 s
 ----------------------------------------
+dolfin 0.6.1
+mån aug 21 18:08:58 CEST 2006
+CPU time cG(1):  123.2 s
+CPU time mcG(1): 31.6614 s
+----------------------------------------
